# torchops

./: .gitignore  README.md  pyproject.toml
src/torchops/: __init__.py  _algebra.py  _base.py  _linop.py  _mixin.py
tests/: test_algebra.py  test_linop.py  test_mixin.py
